# funes

./: .gitignore  Dockerfile  README.md  gcloud_deploy_app.sh  gcloud_push_app.sh  pyproject.toml  tgi.sh
.cache/41/: cache.db
funes/: __main__.py  interactions.py  io_types.py  lang_utils.py  main.py  main_test.py  memorious.py  neo4j_tool.py  prompt.py  test.ipynb  tools.py  utils.py
funes/agents/: agent_types.py  autogen_agent.py  base_agent.py  basic_agent.py  coordinator.py  maestro_app.py  retriever.py  tools.py  user_learner.json  worker_agent.py
funes/ui/: agent_state.py  app.py  autogen_ui.py  base_app.py  basic_ui.py  bibtex_ui.py  learner_agent_ui.py  loader_ui.py  retriever_ui.py  runner.py  test.py
notebooks/: learner_agent_scratchpad.ipynb  neo4j_agent_scratchpad.ipynb  tooling_scratchpad.ipynb
notebooks/.cache/41/: cache.db
notebooks/Persona/: Critic.json  Engineer.json  Francisco.json  Maestro.json  Neo4jExpert.json  Researcher.json
