[project]
name = "funes"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Francisco Perez-Sorrosal", email = "fperezsorrosal@gmail.com"}]
requires-python = ">= 3.10,<3.11"
dependencies = ["rich", "dspy-ai", "ipykernel", "vllm", "setuptools", "huggingface-hub[cli]", "streamlit", "langgraph", "langchain-huggingface", "langchain", "langchain-community", "text-generation", "arxiv", "langchainhub", "langchain-openai"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
funes = { path = ".", editable = true }

[tool.pixi.tasks]
funes = "python funes"
test = "python funes/main_test.py"
st = "python -m streamlit run ./funes/ui/app.py --browser.serverAddress=localhost --server.enableCORS=false --server.enableXsrfProtection=false --server.port 8501"

[tool.pixi.dependencies]
protobuf = "3.20.2.*"
pygraphviz = ">=1.13,<2"

[tool.setuptools]
py-modules = []
