[project]
name = "funes"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Francisco Perez-Sorrosal", email = "fperezsorrosal@gmail.com"}]
requires-python = ">= 3.10,<3.11"
dependencies = ["rich", "dspy-ai", "ipykernel", "vllm", "setuptools", "huggingface-hub[cli]", "streamlit", "langchain", "langchain-community", "text-generation", "arxiv", "langchainhub", "langchain-huggingface", "langgraph", "langchain-ollama", "instructor", "langchain-experimental", "openai", "langchain-openai", "llm-foundation>=0.0.6", "langgraph-checkpoint-sqlite>=1.0.0,<2", "autogen>=1.0.16,<2", "pyautogen>=0.2.35,<0.3", "chainlit>=1.1.402,<2", "decouple>=0.0.7,<0.0.8", "matplotlib>=3.9.2,<4", "duckduckgo-search>=6.2.11,<7", "requests>=2.32.3,<3"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
funes = { path = ".", editable = true }

[tool.pixi.tasks]
funes = "python funes"

[tool.pixi.dependencies]
protobuf = "3.20.2.*"
pygraphviz = ">=1.13,<2"

[tool.setuptools]
py-modules = []
